--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -23,7 +23,7 @@ body {
 .header h1 .seo {
     color: #d9dcd6;
 }
-
+/* div was changed to nav */
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -31,11 +31,11 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
+/* needs to reflect nav not div */
 .header nav ul {
     list-style-type: none;
 }
-
+/* needs to reflect nav not div */
 .header nav ul li {
     display: inline-block;
     margin-left: 25px;
